<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="60dp"
        android:autofillHints="name"
        style="@style/Gadalka.EditText"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/text_cursor"
        app:layout_constraintBottom_toBottomOf="@id/randomButton"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/randomButton"
        android:padding="7dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/random_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Gadalka.MaterialButton"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/random_joke"
        android:id="@+id/jokeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomButton"
        style="@style/Gadalka.MaterialButton"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_height="60dp"
        android:layout_width="wrap_content"
        android:text="@string/random_quote"
        android:layout_marginTop="40dp"
        android:id="@+id/boredButton"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomButton"
        style="@style/Gadalka.MaterialButton"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/exit"
        android:text="@string/exit"
        style="@style/Gadalka.MaterialButton"
        app:layout_constraintTop_toBottomOf="@id/jokeButton"
        app:layout_constraintStart_toEndOf="@id/jokeButton"
        app:layout_constraintEnd_toStartOf="@id/boredButton"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>